# cookiecutter-django-small

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.app_slug}}/: apps.py
